--- a/templates/admin/index.ejs
+++ b/templates/admin/index.ejs
@@ -43,12 +43,15 @@
 		margin-bottom: 2px;
 	}
 </style>
-<br>
 <center>
-	<a class="btn btn-primary btn-lg" href="/admin/add">Add new post here</a>
+	<h3>Hi, <%- username %>!</h3>
 </center>
 
-<br>
+<center>
+	<a class="btn btn-primary btn-lg" href="/admin/add">Add new post here</a>
+	<a class="btn btn-default btn-lg" href="/admin/user">Check user info</a>
+</center>
+
 <br>
 <center>
 	<button class="btn btn-default btn-primary btn-lg" href="#" id="all-btn">All</button>
